# vk-renderer

./: .gitmodules  CMakeLists.txt  colored_triangle.frag  colored_triangle.vert  colored_triangle.vert.spv  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  gradient.comp  gradient_color.comp  gradient_color.spv  shader.bat
src/: main.cpp
